video off-canvas

--- a/index.html
+++ b/index.html
@@ -66,23 +66,26 @@
       <div class="row player-container">
         <div class="col-xs-12 col-md-6 player-bg ramsey bg-cover"></div>
         <div class="col-xs-12 col-md-6 player-bio">
-          <div class="panels hide-scroll">      
-	        <section data-panel="one">
-	          <h3>Jalen Ramsey</h3>
-	          <h5>Pick: Round 1, #5 Overall</h5>
-	          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-	        </section><!--/.one-->
-	        <section data-panel="two">
-	          <h3>Section 2</h3>
-	          <h5>fdfasdfd</h5>
-	          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-	        </section><!--/.two-->
-	        <section data-panel="three">
-	          <h3>Section 3</h3>
-	          <h5>fdfasdfd</h5>
-	          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-	        </section><!--/.three-->
-	      </div><!--/.panels-->
+          <h3>Jalen Ramsey</h3>
+          <h5>Pick: Round 1, #5 Overall</h5>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+          <div class="video-tiles">
+            <div class="tiles-a">
+              <div class="col-xs-12 delayed slideInRight" data-wow-delay="0.7s">
+                <a class="play-it" href="#">
+                  <div class="video-player">
+                    <button class="btn-video"></button>
+                  </div><!--/.video-player-->
+		          <div class="details visually-hidden">
+					<div class="video-wrapper video-wrapper169 js-video-wrapper">
+				      <iframe class="video-iframe js-video-iframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="https://www.youtube.com/embed/kxJqVXLmOkI?enablejsapi=1&modestbranding=1&rel=0&autoplay=1"></iframe>
+				      <button class="video-poster js-video-poster"><i class="btn-video overlay"></i></button>
+				    </div><!--.video-wrapper-->
+			      </div><!--/.details-->
+                </a><!--/.play-it-->
+              </div><!--/.col-->
+            </div><!--/.tiles-a-->
+          </div><!--/.video-tiles-->
         </div><!--/.player-bio-->
       </div><!--/.player-container-->
     </div><!--/.container-->
@@ -93,23 +96,26 @@
       <div class="row player-container">
         <div class="col-xs-12 col-md-6 player-bg jack bg-cover"></div>
         <div class="col-xs-12 col-md-6 player-bio">
-          <div class="panels hide-scroll">      
-	        <section data-panel="one">
-	          <h3>Myles Jack</h3>
-	          <h5>Pick: Round 2, #36 Overall</h5>
-	          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-	        </section><!--/.one-->
-	        <section data-panel="two">
-	          <h3>Section 2</h3>
-	          <h5>fdfasdfd</h5>
-	          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-	        </section><!--/.two-->
-	        <section data-panel="three">
-	          <h3>Section 3</h3>
-	          <h5>fdfasdfd</h5>
-	          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-	        </section><!--/.three-->
-	      </div><!--/.panels-->
+          <h3>Myles Jack</h3>
+          <h5>Pick: Round 2, #36 Overall</h5>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+          <div class="video-tiles">
+            <div class="tiles-a">
+              <div class="col-xs-12 delayed slideInRight" data-wow-delay="0.7s">
+                <a class="play-it" href="#">
+                  <div class="video-player">
+                    <button class="btn-video"></button>
+                  </div><!--/.video-player-->
+		          <div class="details visually-hidden">
+					<div class="video-wrapper video-wrapper169 js-video-wrapper">
+				      <iframe class="video-iframe js-video-iframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="https://www.youtube.com/embed/2XSz3Lz9zvk?enablejsapi=1&modestbranding=1&rel=0&autoplay=1"></iframe>
+				      <button class="video-poster js-video-poster"><i class="btn-video overlay"></i></button>
+				    </div><!--.video-wrapper-->
+			      </div><!--/.details-->
+                </a><!--/.play-it-->
+              </div><!--/.col-->
+            </div><!--/.tiles-a-->
+          </div><!--/.video-tiles-->
         </div><!--/.player-bio-->
       </div><!--/.player-container-->
     </div><!--/.container-->
@@ -175,6 +181,15 @@
           <h3>Jonathan Woodard</h3>
           <h5>Pick: Round 7, #226 Overall</h5>
           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <div class="col-xs-12 col-md-4 player-animations one">
+              <p>one</p>
+            </div>
+            <div class="col-xs-12 col-md-4 player-animations two">
+              <p>two</p>
+            </div>
+            <div class="col-xs-12 col-md-4 player-animations three">
+              <p>three</p>
+            </div>
         </div><!--/.player-bio-->
       </div><!--/.player-container-->
     </div><!--/.container-->
@@ -190,6 +205,13 @@
       </div><!--/.player-container-->
     </div><!--/.container-->
   </section><!--/.day-->
+  
+  <aside role="complementary" class="aside" id="aside" aria-hidden="true" aria-expanded="false">
+	<a onclick="videoStop()" href="#" class="close"><img src="assets/img/btn-close.svg" alt="Close button"></a>
+	<div class="aside-details" tabindex="0" aria-label="Player Highlights Video">
+	</div>
+  </aside>
+ 
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
   <script type="text/javascript" src="assets/js/min/main-min.js"></script>
@@ -197,10 +219,18 @@
   jQuery(function($) {
     var options = {
       $menu: $('.snap-menu'),
-      slideSpeed: 500
+      slideSpeed: 700
     };
     $('body, .panels').panelSnap(options);
   });
+  wow = new WOW( {
+    boxClass: 'delayed', //class name for hidden box
+    animateClass: 'animated', //class name that triggers the  animations 
+    offset: 0, //distance between bottom of browser viewport & top of hidden box.       
+    //mobile: true //turn on/off on mobile           
+  })
+  wow.init();
+
 </script>
 </body>
 </html>
