--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="row">
         <div class="col-xs-12 intro text-center">
           <h1 class="title">A new era has begun<br />in Jacksonville.</h1>
-          <p>The Jaguars' 2016 draft class has received <a href="http://espn.go.com/nfl/draft2016/insider/story/_/id/15230437/2016-nfl-draft-mel-kiper-grades-draft-class-every-nfl-team" target="_blank">top grades</a>.<br />Let's take a look at the new faces in Jacksonville.</p>
+          <p>The Jaguars' 2016 draft class has received <a href="http://espn.go.com/nfl/draft2016/insider/story/_/id/15230437/2016-nfl-draft-mel-kiper-grades-draft-class-every-nfl-team" target="_blank">high praise</a>.<br />Let's take a look at the new faces in Jacksonville.</p>
           <span class="snap-menu">
             <a class="a-btn anchor-btn" href data-panel="ramsey">
               <button class="btn btn-large bg-accent" type="button">Meet the picks!</button>
@@ -79,7 +79,7 @@
                   </div><!--/.video-player-->
 		          <div class="details visually-hidden">
 					<div class="video-wrapper video-wrapper169 js-video-wrapper">
-				      <iframe class="video-iframe js-video-iframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="https://www.youtube.com/embed/kxJqVXLmOkI?enablejsapi=1&modestbranding=1&rel=0&autoplay=1"></iframe>
+				      <iframe class="video-iframe js-video-iframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="//www.youtube.com/embed/kxJqVXLmOkI?enablejsapi=1&modestbranding=1&rel=0&autoplay=1"></iframe>
 				      <button class="video-poster js-video-poster"><i class="btn-video overlay"></i></button>
 				    </div><!--.video-wrapper-->
 			      </div><!--/.details-->
@@ -110,7 +110,7 @@
                   </div><!--/.video-player-->
 		          <div class="details visually-hidden">
 					<div class="video-wrapper video-wrapper169 js-video-wrapper">
-				      <iframe class="video-iframe js-video-iframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="https://www.youtube.com/embed/YuNMK-OMEX0?enablejsapi=1&modestbranding=1&rel=0&autoplay=1"></iframe>
+				      <iframe class="video-iframe js-video-iframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="//www.youtube.com/embed/YuNMK-OMEX0?enablejsapi=1&modestbranding=1&rel=0&autoplay=1"></iframe>
 				      <button class="video-poster js-video-poster"><i class="btn-video overlay"></i></button>
 				    </div><!--.video-wrapper-->
 			      </div><!--/.details-->
@@ -141,7 +141,7 @@
                   </div><!--/.video-player-->
 		          <div class="details visually-hidden">
 					<div class="video-wrapper video-wrapper169 js-video-wrapper">
-				      <iframe class="video-iframe js-video-iframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="https://www.youtube.com/embed/YuNMK-OMEX0?enablejsapi=1&modestbranding=1&rel=0&autoplay=1"></iframe>
+				      <iframe class="video-iframe js-video-iframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="//www.youtube.com/embed/YuNMK-OMEX0?enablejsapi=1&modestbranding=1&rel=0&autoplay=1"></iframe>
 				      <button class="video-poster js-video-poster"><i class="btn-video overlay"></i></button>
 				    </div><!--.video-wrapper-->
 			      </div><!--/.details-->
@@ -172,7 +172,7 @@
                   </div><!--/.video-player-->
 		          <div class="details visually-hidden">
 					<div class="video-wrapper video-wrapper169 js-video-wrapper">
-				      <iframe class="video-iframe js-video-iframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="https://www.youtube.com/embed/YuNMK-OMEX0?enablejsapi=1&modestbranding=1&rel=0&autoplay=1"></iframe>
+				      <iframe class="video-iframe js-video-iframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="//www.youtube.com/embed/YuNMK-OMEX0?enablejsapi=1&modestbranding=1&rel=0&autoplay=1"></iframe>
 				      <button class="video-poster js-video-poster"><i class="btn-video overlay"></i></button>
 				    </div><!--.video-wrapper-->
 			      </div><!--/.details-->
@@ -203,7 +203,7 @@
                   </div><!--/.video-player-->
 		          <div class="details visually-hidden">
 					<div class="video-wrapper video-wrapper169 js-video-wrapper">
-				      <iframe class="video-iframe js-video-iframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="https://www.youtube.com/embed/YuNMK-OMEX0?enablejsapi=1&modestbranding=1&rel=0&autoplay=1"></iframe>
+				      <iframe class="video-iframe js-video-iframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="//www.youtube.com/embed/YuNMK-OMEX0?enablejsapi=1&modestbranding=1&rel=0&autoplay=1"></iframe>
 				      <button class="video-poster js-video-poster"><i class="btn-video overlay"></i></button>
 				    </div><!--.video-wrapper-->
 			      </div><!--/.details-->
@@ -234,7 +234,7 @@
                   </div><!--/.video-player-->
 		          <div class="details visually-hidden">
 					<div class="video-wrapper video-wrapper169 js-video-wrapper">
-				      <iframe class="video-iframe js-video-iframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="https://www.youtube.com/embed/YuNMK-OMEX0?enablejsapi=1&modestbranding=1&rel=0&autoplay=1"></iframe>
+				      <iframe class="video-iframe js-video-iframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="//www.youtube.com/embed/YuNMK-OMEX0?enablejsapi=1&modestbranding=1&rel=0&autoplay=1"></iframe>
 				      <button class="video-poster js-video-poster"><i class="btn-video overlay"></i></button>
 				    </div><!--.video-wrapper-->
 			      </div><!--/.details-->
@@ -265,7 +265,7 @@
                   </div><!--/.video-player-->
 		          <div class="details visually-hidden">
 					<div class="video-wrapper video-wrapper169 js-video-wrapper">
-				      <iframe class="video-iframe js-video-iframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="https://www.youtube.com/embed/YuNMK-OMEX0?enablejsapi=1&modestbranding=1&rel=0&autoplay=1"></iframe>
+				      <iframe class="video-iframe js-video-iframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="//www.youtube.com/embed/YuNMK-OMEX0?enablejsapi=1&modestbranding=1&rel=0&autoplay=1"></iframe>
 				      <button class="video-poster js-video-poster"><i class="btn-video overlay"></i></button>
 				    </div><!--.video-wrapper-->
 			      </div><!--/.details-->
@@ -277,17 +277,25 @@
       </div><!--/.player-container-->
     </div><!--/.container-->
   </section><!--/.day-->
-  
-  <section class="section credits" data-panel="credits">
-    <div class="container-full">
+
+  <section class="credits" data-panel="credits">
+    <div class="container">
       <div class="row">
-        <div class="col-xs-12 col-md-6"></div>
-        <div class="col-xs-12 col-md-6">
-          <p>Created by: <a href="http://brianzotoole.com" target="_blank">Brian O'Toole</a></p>
-        </div><!--/.player-bio-->
-      </div><!--/.player-container-->
+        <div class="col-xs-12 intro text-center">
+          <h2 class="title">This year should be exciting. Go Jags!</h2>
+          <p>Created by: <a href="http://brianzotoole.com" target="_blank">Brian O'Toole</a>.<br />
+          I am a web developer living in Tampa, FL. If you need help on a web project, <a href="http://brianzotoole.com" target="_blank">contact me</a>.<br />
+          <em>* photos & bios courtesy of the NFL and Jacksonville Jaguars.</em></p>
+          <a class="a-btn anchor-btn tw" href="#">
+            <button class="btn btn-large bg-accent" type="button">Share on Twitter</button>
+          </a>
+          <a class="a-btn anchor-btn fb" href="#">
+            <button class="btn btn-large bg-accent" type="button">Share on Facebook</button>
+          </a>
+        </div><!--/.col-->
+      </div><!--/.row-->
     </div><!--/.container-->
-  </section><!--/.day-->
+  </section><!--/.credits-->
   
   <aside role="complementary" class="aside" id="aside" aria-hidden="true" aria-expanded="false">
 	<a onclick="videoStop()" href="#" class="close"><img src="assets/img/btn-close.svg" alt="Close button"></a>
