content pt3 + img optimization

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US" prefix="og: http://ogp.me/ns#">
 <head>
-  <title>Jags 2016</title>
+  <title>Jacksonville Jaguars Draft Results 2016</title>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,18 +13,17 @@
   <header class="site">
     <div class="container">
       <a href="#" class="branding">
-        <span class="logo">Jaguars 2016</span>
+        <span class="logo">Move Those Chains!</span>
       </a><!--/.branding-->
       <nav class="main">
         <ul>
-          <li><a href="#">Tickets</a></li>
-          <li><a href="#">News</a></li>
+          <li><span class="snap-menu"><a href data-panel="ramsey">2016 Draft</a></span></li>
           <li><span class="snap-menu"><a href data-panel="credits">Credits</a></span></li>
         </ul>
       </nav><!--/.main-->
     </div><!--/.container-->
   </header><!--/.site-->
-    
+
   <section class="hero section-shorter">
     <div class="container">
       <div class="row">
@@ -60,7 +59,7 @@
       </div><!--/.container-->
     </div><!--/.subnav-->
   </div><!--/.subnav-wrapper-->
-  
+
   <section class="section ramsey" data-panel="ramsey">
     <div class="container-full">
       <div class="row player-container">
@@ -91,7 +90,7 @@
       </div><!--/.player-container-->
     </div><!--/.container-->
   </section><!--/.ramsey-->
-  
+
   <section class="section jack" data-panel="jack">
     <div class="container-full">
       <div class="row player-container">
@@ -99,7 +98,7 @@
         <div class="col-xs-12 col-md-6 player-bio delayed slideInRight" data-wow-delay="0.1s">
           <h3 class="margin-bottom-less">Myles Jack</h3>
           <h5>Pick: Round 2, #36 Overall</h5>
-          <p>One of the most versatile players in college football the past three seasons, Jack earned a reputation as a dynamic defender and a contributor on offense. In fact, he earned both the Pac-12 Offensive and Defensive Rookie of the Year award in 2013, as well as being named finalist for Paul Hornung Award as the nations most versatile player. A second-team All-Pac 12 defender as a freshman (75 tackles, two interception, 11 passes defended), he had seven rushing touchdowns on the year as well. Pac-12 coaches voted him second team all-conference again in 2014, as he made 88 tackles, eight for loss, intercepted one pass and broke up seven others. He also contributed as a runner, as well, carrying the rock 28 times for 113 yards and three scores. Jacks junior year was stopped short by a knee injury three games in, though he looked like he was on the way to a fantastic season before the malady occurred (15 tackles, interception).</p>
+          <p>One of the most versatile players in college football the past three seasons, Jack earned a reputation as a dynamic defender and a contributor on offense. In fact, he earned both the Pac-12 Offensive and Defensive Rookie of the Year award in 2013, as well as being named finalist for Paul Hornung Award as the nations most versatile player. A second-team All-Pac 12 defender as a freshman (75 tackles, two interception, 11 passes defended), he had seven rushing touchdowns on the year as well. Pac-12 coaches voted him second team all-conference again in 2014, as he made 88 tackles, eight for loss, intercepted one pass and broke up seven others.</p>
           <div class="video-tiles">
             <div class="tiles-a">
               <div class="col-xs-12 delayed slideInRight no-pad" data-wow-delay="0.5s">
@@ -110,7 +109,7 @@
                   </div><!--/.video-player-->
 		          <div class="details visually-hidden">
 					<div class="video-wrapper video-wrapper169 js-video-wrapper">
-				      <iframe class="video-iframe js-video-iframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="//www.youtube.com/embed/YuNMK-OMEX0?enablejsapi=1&modestbranding=1&rel=0&autoplay=1"></iframe>
+				      <iframe class="video-iframe js-video-iframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="//www.youtube.com/embed/MQoOrYXS1S0?enablejsapi=1&modestbranding=1&rel=0&autoplay=1"></iframe>
 				      <button class="video-poster js-video-poster"><i class="btn-video overlay"></i></button>
 				    </div><!--.video-wrapper-->
 			      </div><!--/.details-->
@@ -122,7 +121,7 @@
       </div><!--/.player-container-->
     </div><!--/.container-->
   </section><!--/.jack-->
-  
+
   <section class="section ngakoue" data-panel="ngakoue">
     <div class="container-full">
       <div class="row player-container">
@@ -141,7 +140,7 @@
                   </div><!--/.video-player-->
 		          <div class="details visually-hidden">
 					<div class="video-wrapper video-wrapper169 js-video-wrapper">
-				      <iframe class="video-iframe js-video-iframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="//www.youtube.com/embed/YuNMK-OMEX0?enablejsapi=1&modestbranding=1&rel=0&autoplay=1"></iframe>
+				      <iframe class="video-iframe js-video-iframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="//www.youtube.com/embed/Hj3_5FSZAqY?enablejsapi=1&modestbranding=1&rel=0&autoplay=1"></iframe>
 				      <button class="video-poster js-video-poster"><i class="btn-video overlay"></i></button>
 				    </div><!--.video-wrapper-->
 			      </div><!--/.details-->
@@ -153,7 +152,7 @@
       </div><!--/.player-container-->
     </div><!--/.container-->
   </section><!--/.ngakoue-->
-  
+
   <section class="section day" data-panel="day">
     <div class="container-full">
       <div class="row player-container">
@@ -172,7 +171,7 @@
                   </div><!--/.video-player-->
 		          <div class="details visually-hidden">
 					<div class="video-wrapper video-wrapper169 js-video-wrapper">
-				      <iframe class="video-iframe js-video-iframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="//www.youtube.com/embed/YuNMK-OMEX0?enablejsapi=1&modestbranding=1&rel=0&autoplay=1"></iframe>
+				      <iframe class="video-iframe js-video-iframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="//www.youtube.com/embed/_M5BhEHYefA?enablejsapi=1&modestbranding=1&rel=0&autoplay=1"></iframe>
 				      <button class="video-poster js-video-poster"><i class="btn-video overlay"></i></button>
 				    </div><!--.video-wrapper-->
 			      </div><!--/.details-->
@@ -184,7 +183,7 @@
       </div><!--/.player-container-->
     </div><!--/.container-->
   </section><!--/.day-->
-  
+
   <section class="section holmes" data-panel="holmes">
     <div class="container-full">
       <div class="row player-container">
@@ -203,7 +202,7 @@
                   </div><!--/.video-player-->
 		          <div class="details visually-hidden">
 					<div class="video-wrapper video-wrapper169 js-video-wrapper">
-				      <iframe class="video-iframe js-video-iframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="//www.youtube.com/embed/YuNMK-OMEX0?enablejsapi=1&modestbranding=1&rel=0&autoplay=1"></iframe>
+				      <iframe class="video-iframe js-video-iframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="//www.youtube.com/embed/xIv1Di9S1gc?enablejsapi=1&modestbranding=1&rel=0&autoplay=1"></iframe>
 				      <button class="video-poster js-video-poster"><i class="btn-video overlay"></i></button>
 				    </div><!--.video-wrapper-->
 			      </div><!--/.details-->
@@ -215,7 +214,7 @@
       </div><!--/.player-container-->
     </div><!--/.container-->
   </section><!--/.holmes-->
-  
+
   <section class="section allen" data-panel="allen">
     <div class="container-full">
       <div class="row player-container">
@@ -234,7 +233,7 @@
                   </div><!--/.video-player-->
 		          <div class="details visually-hidden">
 					<div class="video-wrapper video-wrapper169 js-video-wrapper">
-				      <iframe class="video-iframe js-video-iframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="//www.youtube.com/embed/YuNMK-OMEX0?enablejsapi=1&modestbranding=1&rel=0&autoplay=1"></iframe>
+				      <iframe class="video-iframe js-video-iframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="//www.youtube.com/embed/FbFfXifWWXI?enablejsapi=1&modestbranding=1&rel=0&autoplay=1"></iframe>
 				      <button class="video-poster js-video-poster"><i class="btn-video overlay"></i></button>
 				    </div><!--.video-wrapper-->
 			      </div><!--/.details-->
@@ -246,7 +245,7 @@
       </div><!--/.player-container-->
     </div><!--/.container-->
   </section><!--/.allen-->
-  
+
   <section class="section woodard" data-panel="woodard">
     <div class="container-full">
       <div class="row player-container">
@@ -265,7 +264,7 @@
                   </div><!--/.video-player-->
 		          <div class="details visually-hidden">
 					<div class="video-wrapper video-wrapper169 js-video-wrapper">
-				      <iframe class="video-iframe js-video-iframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="//www.youtube.com/embed/YuNMK-OMEX0?enablejsapi=1&modestbranding=1&rel=0&autoplay=1"></iframe>
+				      <iframe class="video-iframe js-video-iframe" src="" frameborder="0" allowTransparency="true" allowfullscreen data-src="//www.youtube.com/embed/unX4hhHWgqA?enablejsapi=1&modestbranding=1&rel=0&autoplay=1"></iframe>
 				      <button class="video-poster js-video-poster"><i class="btn-video overlay"></i></button>
 				    </div><!--.video-wrapper-->
 			      </div><!--/.details-->
@@ -282,27 +281,28 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12 intro text-center">
-          <h2 class="title">This year should be exciting. Go Jags!</h2>
+          <h2 class="title">Keep the chains movin'. Go Jags!</h2>
           <p>Created by: <a href="http://brianzotoole.com" target="_blank">Brian O'Toole</a>.<br />
-          I am a web developer living in Tampa, FL. If you need help on a web project, <a href="http://brianzotoole.com" target="_blank">contact me</a>.<br />
-          <em>* photos & bios courtesy of the NFL and Jacksonville Jaguars.</em></p>
-          <a class="a-btn anchor-btn tw" href="#">
-            <button class="btn btn-large bg-accent" type="button">Share on Twitter</button>
-          </a>
-          <a class="a-btn anchor-btn fb" href="#">
+          I am a web developer living in Tampa, FL. If you need help on a web project, <a href="http://brianzotoole.com/#contact" target="_blank">contact me</a>.<br />
+          <em>Photos &amp; bios courtesy of the NFL and the Jacksonville Jaguars. Vidoes courtsey of YouTube.</em>
+          </p>
+          <a class="a-btn anchor-btn tw" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fmovethosechains.com&t=Meet%20the%20Jacksonville%20Jaguars%202016%20Draft%20Picks" title="Share on Facebook" target="_blank">
             <button class="btn btn-large bg-accent" type="button">Share on Facebook</button>
+          </a>
+          <a class="a-btn anchor-btn fb" href="https://twitter.com/intent/tweet?source=http%3A%2F%2Fmovethosechains.com&text=Meet%20the%20Jacksonville%20Jaguars%202016%20Draft%20Picks:%20http%3A%2F%2Fmovethosechains.com" target="_blank" title="Tweet">
+            <button class="btn btn-large bg-accent" type="button">Share on Twitter</button>
           </a>
         </div><!--/.col-->
       </div><!--/.row-->
     </div><!--/.container-->
   </section><!--/.credits-->
-  
+
   <aside role="complementary" class="aside" id="aside" aria-hidden="true" aria-expanded="false">
 	<a onclick="videoStop()" href="#" class="close"><img src="assets/img/btn-close.svg" alt="Close button"></a>
 	<div class="aside-details" tabindex="0" aria-label="Player Highlights Video">
 	</div>
   </aside>
- 
+
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
   <script type="text/javascript" src="assets/js/min/main-min.js"></script>
@@ -310,15 +310,16 @@
   jQuery(function($) {
     var options = {
       $menu: $('.snap-menu'),
-      slideSpeed: 700
+      slideSpeed: 300,
+      offset: 56
     };
     $('body, .panels').panelSnap(options);
   });
   wow = new WOW( {
     boxClass: 'delayed', //class name for hidden box
-    animateClass: 'animated', //class name that triggers the  animations 
-    offset: 60, //distance between bottom of browser viewport & top of hidden box.       
-    mobile: false          
+    animateClass: 'animated', //class name that triggers the  animations
+    offset: 56, //distance between bottom of browser viewport & top of hidden box.
+    mobile: false
   })
   wow.init();
 
