--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="A new era has begun in Jacksonville. The Jacksonville Jaguars' 2016 draft class has received high praise. Let's take a look at the new faces in Jacksonville."/>
+  <meta name="keywords" content="jacksonville jaguars, jaguars 2016 draft, jalen ramsey jaguars, myles jack jaguars, 2016 draft picks, jaguars 2016 draft class, movethosechains jacksonville, move those chains jaguars, duval jaguars"/>
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Meet the Jacksonville Jaguars 2016 Draft Class." />
+  <meta property="og:description" content="A new era has begun in Jacksonville. The Jacksonville Jaguars' 2016 draft class has received high praise. Let's take a look at the new faces in Jacksonville." />
+  <meta property="og:url" content="http://movethosechains.com" />
+  <meta property="og:site_name" content="Move Those Chains" />
+  <meta property="og:image" content="http://movethosechains.com/assets/img/player-ramsey.jpg" />
   <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -44,7 +53,7 @@
     <div class="subnav">
       <div class="container">
         <div class="row">
-          <div class="col-sm-12">
+          <div class="col-sm-12 no-pad">
             <ul class="flex sticky-nav snap-menu">
               <li><a href data-panel="ramsey">Jalen Ramsey</a></li>
               <li><a href data-panel="jack">Myles Jack</a></li>
@@ -289,7 +298,7 @@
           <a class="a-btn anchor-btn tw" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fmovethosechains.com&t=Meet%20the%20Jacksonville%20Jaguars%202016%20Draft%20Picks" title="Share on Facebook" target="_blank">
             <button class="btn btn-large bg-accent" type="button">Share on Facebook</button>
           </a>
-          <a class="a-btn anchor-btn fb" href="https://twitter.com/intent/tweet?source=http%3A%2F%2Fmovethosechains.com&text=Meet%20the%20Jacksonville%20Jaguars%202016%20Draft%20Picks:%20http%3A%2F%2Fmovethosechains.com" target="_blank" title="Tweet">
+          <a class="a-btn anchor-btn fb" href="https://twitter.com/intent/tweet?source=http%3A%2F%2Fmovethosechains.com&text=Meet%20the%20%23Jacksonville%20%23Jaguars%202016%20Draft%20Picks%20-%20%20http%3A//movethosechains.com" target="_blank" title="Tweet">
             <button class="btn btn-large bg-accent" type="button">Share on Twitter</button>
           </a>
         </div><!--/.col-->
@@ -303,7 +312,6 @@
 	</div>
   </aside>
 
-
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
   <script type="text/javascript" src="assets/js/min/main-min.js"></script>
   <script>
@@ -314,15 +322,14 @@
       offset: 56
     };
     $('body, .panels').panelSnap(options);
+    wow = new WOW( {
+      boxClass: 'delayed', //class name for hidden box
+      animateClass: 'animated', //class name that triggers the  animations
+      offset: 56, //distance between bottom of browser viewport & top of hidden box.
+      mobile: false
+    })
+    wow.init();
   });
-  wow = new WOW( {
-    boxClass: 'delayed', //class name for hidden box
-    animateClass: 'animated', //class name that triggers the  animations
-    offset: 56, //distance between bottom of browser viewport & top of hidden box.
-    mobile: false
-  })
-  wow.init();
-
-</script>
+  </script>
 </body>
 </html>
