--- a/index.html
+++ b/index.html
@@ -316,12 +316,14 @@
   <script type="text/javascript" src="assets/js/min/main-min.js"></script>
   <script>
   jQuery(function($) {
+    //snap init
     var options = {
       $menu: $('.snap-menu'),
       slideSpeed: 300,
       offset: 56
     };
     $('body, .panels').panelSnap(options);
+    //Wow init
     wow = new WOW( {
       boxClass: 'delayed', //class name for hidden box
       animateClass: 'animated', //class name that triggers the  animations
@@ -330,6 +332,14 @@
     })
     wow.init();
   });
+  //Google Analytics
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-77558221-1', 'auto');
+  ga('send', 'pageview');
   </script>
 </body>
 </html>
