--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       </a><!--/.branding-->
       <nav class="main">
         <ul>
-          <li><span class="snap-menu"><a href data-panel="ramsey">2016 Draft</a></span></li>
-          <li><span class="snap-menu"><a href data-panel="credits">Credits</a></span></li>
+          <li><span class="snap-menu"><a href="#ramsey" data-panel="ramsey">2016 Draft</a></span></li>
+          <li><span class="snap-menu"><a href="#credits" data-panel="credits">Credits</a></span></li>
         </ul>
       </nav><!--/.main-->
     </div><!--/.container-->
@@ -40,7 +40,7 @@
           <h1 class="title">A new era has begun<br />in Jacksonville.</h1>
           <p>The Jaguars' 2016 draft class has received <a href="http://espn.go.com/nfl/draft2016/insider/story/_/id/15230437/2016-nfl-draft-mel-kiper-grades-draft-class-every-nfl-team" target="_blank">high praise</a>.<br />Let's take a look at the new faces in Jacksonville.</p>
           <span class="snap-menu">
-            <a class="a-btn anchor-btn" href data-panel="ramsey">
+            <a class="a-btn anchor-btn" href="#ramsey" data-panel="ramsey">
               <button class="btn btn-large bg-accent" type="button">Meet the picks!</button>
             </a>
           </span><!--/.snap-menu-->
@@ -55,13 +55,13 @@
         <div class="row">
           <div class="col-sm-12 no-pad">
             <ul class="flex sticky-nav snap-menu">
-              <li><a href data-panel="ramsey">Jalen Ramsey</a></li>
-              <li><a href data-panel="jack">Myles Jack</a></li>
-              <li><a href data-panel="ngakoue">Yannick Ngakoue</a></li>
-              <li><a href data-panel="day">Sheldon Day</a></li>
-              <li><a href data-panel="holmes">Tyrone Holmes</a></li>
-              <li><a href data-panel="allen">Branden Allen</a></li>
-              <li><a href data-panel="woodard">Jonathan Woodard</a></li>
+              <li><a href="#ramsey" data-panel="ramsey">Jalen Ramsey</a></li>
+              <li><a href="#jack" data-panel="jack">Myles Jack</a></li>
+              <li><a href="#ngakoue" data-panel="ngakoue">Yannick Ngakoue</a></li>
+              <li><a href="#day" data-panel="day">Sheldon Day</a></li>
+              <li><a href="#holmes" data-panel="holmes">Tyrone Holmes</a></li>
+              <li><a href="#allen" data-panel="allen">Branden Allen</a></li>
+              <li><a href="#woodard" data-panel="woodard">Jonathan Woodard</a></li>
             </ul><!--/.snap-menu-->
           </div><!--/.col-->
         </div><!--/.row-->
@@ -69,7 +69,7 @@
     </div><!--/.subnav-->
   </div><!--/.subnav-wrapper-->
 
-  <section class="section ramsey" data-panel="ramsey">
+  <section class="section ramsey" data-panel="ramsey" id="ramsey">
     <div class="container-full">
       <div class="row player-container">
         <div class="col-xs-12 col-md-6 player-bg ramsey bg-cover"></div>
@@ -100,7 +100,7 @@
     </div><!--/.container-->
   </section><!--/.ramsey-->
 
-  <section class="section jack" data-panel="jack">
+  <section class="section jack" data-panel="jack" id="jack">
     <div class="container-full">
       <div class="row player-container">
         <div class="col-xs-12 col-md-6 player-bg jack bg-cover"></div>
@@ -131,7 +131,7 @@
     </div><!--/.container-->
   </section><!--/.jack-->
 
-  <section class="section ngakoue" data-panel="ngakoue">
+  <section class="section ngakoue" data-panel="ngakoue" id="ngakoue">
     <div class="container-full">
       <div class="row player-container">
         <div class="col-xs-12 col-md-6 player-bg ngakoue bg-cover"></div>
@@ -162,7 +162,7 @@
     </div><!--/.container-->
   </section><!--/.ngakoue-->
 
-  <section class="section day" data-panel="day">
+  <section class="section day" data-panel="day" id="day">
     <div class="container-full">
       <div class="row player-container">
         <div class="col-xs-12 col-md-6 player-bg day bg-cover"></div>
@@ -193,7 +193,7 @@
     </div><!--/.container-->
   </section><!--/.day-->
 
-  <section class="section holmes" data-panel="holmes">
+  <section class="section holmes" data-panel="holmes" id="holmes">
     <div class="container-full">
       <div class="row player-container">
         <div class="col-xs-12 col-md-6 player-bg holmes bg-cover"></div>
@@ -224,7 +224,7 @@
     </div><!--/.container-->
   </section><!--/.holmes-->
 
-  <section class="section allen" data-panel="allen">
+  <section class="section allen" data-panel="allen" id="allen">
     <div class="container-full">
       <div class="row player-container">
         <div class="col-xs-12 col-md-6 player-bg allen bg-cover"></div>
@@ -255,7 +255,7 @@
     </div><!--/.container-->
   </section><!--/.allen-->
 
-  <section class="section woodard" data-panel="woodard">
+  <section class="section woodard" data-panel="woodard" id="woodard">
     <div class="container-full">
       <div class="row player-container">
         <div class="col-xs-12 col-md-6 player-bg woodard bg-cover"></div>
@@ -286,7 +286,7 @@
     </div><!--/.container-->
   </section><!--/.day-->
 
-  <section class="credits" data-panel="credits">
+  <section class="credits" data-panel="credits" id="credits">
     <div class="container">
       <div class="row">
         <div class="col-xs-12 intro text-center">
