--- a/index.html
+++ b/index.html
@@ -319,8 +319,7 @@
       //snap init
       var options = {
         $menu: $('.snap-menu'),
-        slideSpeed: 300,
-        offset: 56
+        slideSpeed: 300
       };
     $('body, .panels').panelSnap(options);
     //Wow init
